--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "diario-de-viagens": "file:",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "path": "^0.12.7",
+    "pg": "^8.13.1",
+    "sequelize": "^6.37.5"
   }
 }
